# dart-qtbindings

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  analysis_options.yaml  bindings_global.h  dartagnan.json  license-file-template  refresh_bindings.dart  test_exports.h  typesystem.xml  utils.dart
.github/workflows/: build.yml
app/: pubspec.yaml
shiboken_snippets/: qtwidgets.cpp  qvariant.cpp
